add errorHandling for fullDayTimeOff API + API